fix css replacement with multiples selectors

--- a/test/src/styles/app.css
+++ b/test/src/styles/app.css
@@ -12,6 +12,14 @@
     }
 }
 
+.slider,
+.slider__item {
+    display: flex;
+}
+.slider__item:first-child {
+    padding-left: var(--padding);
+}
+
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
